--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -7,11 +7,11 @@
 
     <data>
         <variable
-            name="repo"
+            name="repository"
             type="com.ananth.githubpeople.data.model.Repository" />
         <variable
             name="clickListener"
-            type="com.ananth.githubpeople.ui.search.ItemClickListener" />
+            type="com.ananth.githubpeople.ui.detail.RepoClickListener" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="@{repo.name}"
+                android:text="@{repository.name}"
                 android:textColor="@color/black"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginStart="@dimen/spacing_small"
@@ -53,7 +53,7 @@
                 android:ellipsize="end"
                 android:layout_marginEnd="@dimen/spacing_normal"
                 android:maxLines="2"
-                android:text="@{repo.description}"
+                android:text="@{repository.description}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_marginEnd="@dimen/spacing_normal"
                 app:layout_constraintBottom_toBottomOf="@+id/item_username"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="@{repo.forksCount}"
+                android:text="34"
                 app:layout_constraintTop_toTopOf="@+id/item_username"
                 tools:text="324" />
 
