--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -21,17 +21,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.detail.DetailFragment">
-
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="@dimen/spacing_normal"
-            app:image_url="@{user.avatarUrl}"
+            app:cardElevation="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:cardCornerRadius="50dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:image_url="@{user.avatarUrl}"
+
             tools:src="@mipmap/ic_launcher_round" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView"
@@ -40,6 +47,10 @@
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginTop="@dimen/spacing_small"
             android:layout_marginEnd="@dimen/spacing_normal"
+            android:shadowColor="@color/shadow_color"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
             android:text="@{user.login}"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -57,8 +68,8 @@
             app:layout_constraintEnd_toEndOf="@+id/repo_list"
             app:layout_constraintStart_toStartOf="@+id/repo_list"
             app:layout_constraintTop_toTopOf="@+id/repo_list"
-            app:visible_if_true="@{viewModel.status == ApiStatus.LOADING}"
-             />
+            app:layout_constraintVertical_bias="0.1"
+            app:visible_if_true="@{viewModel.status == ApiStatus.LOADING}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/repo_list"
