--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -28,18 +28,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+
             <TextView
                 android:id="@+id/item_username"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{repository.name}"
                 android:textColor="@color/black"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:layout_marginStart="@dimen/spacing_small"
                 android:textSize="18sp"
+                android:layout_marginEnd="@dimen/spacing_normal"
+                android:singleLine="true"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="retrofit" />
